--- a/public/css/main.css
+++ b/public/css/main.css
@@ -80,6 +80,7 @@ body{
 .create-form{
     width:40%;
     margin: 0 auto;
+    margin-top: 4rem;
     box-shadow: 0 0.4rem 0.7rem rgba(64, 81, 78, 0.3);
     min-height: 70vh;
     display: flex;
@@ -132,6 +133,52 @@ body{
     margin-bottom: 1rem;
 }
 
+.home{
+    display: flex;
+    height: 8rem;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 2px solid black;
+}
+
+.home__button{
+    font-size: 4rem;
+    padding: 1rem;
+    border: none;
+    background: #E4F9F5;
+}
+
+.nav{
+    height: 15rem;
+}
+
+.nav__ul{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav__li{
+    margin: 10rem;
+}
+
+.nav__button{
+    border: none;
+    border-bottom: 2px solid black;
+    background: #E4F9F5;
+    font-size: 2rem;
+    padding: 1rem;
+    box-shadow: 0 0.3rem 0.5rem rgba(64, 81, 78, 0.3);
+
+}
+
+
+a{
+    text-decoration: none;
+    color: black;
+}
 
 button:hover{
     cursor:pointer;
