backend klaar behalve juiste data

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -136,6 +136,8 @@ body{
 .home{
     display: flex;
     height: 8rem;
+    margin-left:4rem;
+    margin-right: 4rem;
     align-items: center;
     justify-content: center;
     border-bottom: 2px solid black;
@@ -146,6 +148,21 @@ body{
     padding: 1rem;
     border: none;
     background: #E4F9F5;
+}
+
+.home__form{
+    position: absolute;
+    top: 3rem;
+    right: 3rem;
+
+}
+
+.home__logout{
+    border: none;
+    background: #caf5ec;
+    font-size: 2rem;
+    padding: 1rem;
+    box-shadow: 0 0.3rem 0.5rem rgba(64, 81, 78, 0.3);
 }
 
 .nav{
@@ -161,18 +178,49 @@ body{
 }
 
 .nav__li{
+    
     margin: 10rem;
 }
 
 .nav__button{
+    width: 25rem;
     border: none;
     border-bottom: 2px solid black;
-    background: #E4F9F5;
+    background: #caf5ec;
     font-size: 2rem;
     padding: 1rem;
     box-shadow: 0 0.3rem 0.5rem rgba(64, 81, 78, 0.3);
 
 }
+
+.regel{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.regel__li{
+    display:flex;
+    padding: 2rem;
+    border: 2px solid rgba(64, 81, 78, 0.3);
+    border-radius: 2rem;
+    margin: 1rem;
+    background: #caf5ec;
+}
+
+.regel__item{
+    width: 15rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.regel__item__button{
+    width: 15rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
 
 
 a{
