eerste deel gestyled

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,8 @@
     margin: 0;
     padding:0;
     box-sizing: border-box;
+    /* font-family: 'Abel', sans-serif; */
+    font-family: 'Varela', sans-serif;
 }
 
 html{
@@ -13,7 +15,6 @@ body{
     font-size: 1.8rem;
     padding: 2rem;
     background: #E4F9F5;
-    font-family: sans-serif;
 }
 
 .dierCard{
@@ -26,14 +27,24 @@ body{
 
 .dierCard::after{
     content:"";
-    width: 5rem;
-    height:5rem;
+    width: 3rem;
+    height:3rem;
     position:absolute;
     bottom: 0;
     right: 0;
     background: #30E3CA;
     clip-path:polygon(100% 0%, 100% 100%, 0% 100%);
 }
+/* .dierCard::before{
+    content:"";
+    width: 2rem;
+    height:2rem;
+    position:absolute;
+    bottom: 0;
+    left: 0;
+    background: #30E3CA;
+    clip-path:polygon(100% 0%, 100% 100%, 0% 100%);
+} */
 
 .dierCard__figure{
     width: 100%;
@@ -47,17 +58,26 @@ body{
 }
 
 .dierCard__text{
-    color: #40514E;
-    height: 20%;
-    display: flex;
-    padding: 2rem;
+    color: #1d2020;
+    /* height: 20%; */
+    /* display: flex; */
+    padding: 1.5rem 1rem 0 1rem;
+    margin: 0 1rem;
     align-items: center;
+}
+
+.dierCard__title{
+    font-weight: bold;
+    text-align: center;
+    font-size: 2rem;
+    padding: 1rem;
 }
 
 .dierCard__buttonsection{
     height: 20%;
     display: flex;
-    padding: 2rem;
+    padding: 1rem 1rem 0 1rem;
+    margin-left: 1rem;
     align-items: center;
 }
 
@@ -69,6 +89,8 @@ body{
     color:40514E;
     border-radius: 1rem;
     box-shadow: 0 0.3rem 0.5rem rgba(64, 81, 78, 0.3);
+    font-size: 1.7rem;
+    font-weight: bold;
 }
 
 .dierCard__button:hover{
@@ -82,7 +104,20 @@ body{
     margin: 0 auto;
     margin-top: 4rem;
     box-shadow: 0 0.4rem 0.7rem rgba(64, 81, 78, 0.3);
-    min-height: 70vh;
+    min-height: 60vh;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 2rem;
+    background: #dafff8;
+}
+
+.create-form__review{
+    width:40%;
+    margin: 0 auto;
+    margin-top: 4rem;
+    box-shadow: 0 0.4rem 0.7rem rgba(64, 81, 78, 0.3);
+    min-height: 50vh;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
@@ -92,23 +127,44 @@ body{
 
 .create-form__form{
     width: 100%;
+    margin: 0 1rem;
+}
+
+.create-form__split{
+    display: flex;
+
+}
+
+.create-form__header{
+    text-align: center;
 }
 
 .create-form__section{
     margin-top: 3rem;
     font-size: 140%;
-    width: 100%;    
+    width: 100%;
 }
 
 .create-form__input{
     display: block;
-    width: 80%;
+    width: 100%;
     margin-top:0.8rem;
     font-size: 70%;
 }
 
+.create-form__input-split{
+    display: block;
+    width: 100%;
+    margin-top:0.8rem;
+    font-size: 70%;
+}
+
+.left{
+    margin-right: 4rem;
+}
+
 .create-form__input--big{
-    height: 10rem;
+
 }
 
 .create-form__button{
@@ -116,21 +172,33 @@ body{
     background: #30E3CA;
     box-sizing: border-box;
     border:none;
-    color:40514E;
+    color:40514;
     border-radius: 1rem;
     box-shadow: 0 0.3rem 0.5rem rgba(64, 81, 78, 0.3);
+    font-size: 1.7rem;
+    font-weight: bold;
 }
 
-.filter-secttion{
+.filter-section{
+    display: flex;
+    justify-content: center;
     width:100%;
     font-size: 140%;
+    text-align: center; 
+    padding-bottom: 2rem;
 
+}
+
+.filter-section__stripe{
+    width: 40%;
+    border-bottom: 2px solid black;
 }
 
 .filter-section__wrapper{
     display: inline-block;
     padding: 1rem;
-    margin-bottom: 1rem;
+    margin: 0 2rem 0 1rem;
+    
 }
 
 .home{
@@ -207,18 +275,27 @@ body{
     border-radius: 2rem;
     margin: 1rem;
     background: #caf5ec;
+    align-items: center;
 }
 
 .regel__item{
-    width: 15rem;
+    width: 20rem;
     margin-left: 1rem;
     margin-right: 1rem;
 }
 
 .regel__item__button{
-    width: 15rem;
+    width: 18rem;
     margin-left: 1rem;
     margin-right: 1rem;
+    padding: 1rem;
+    background: #30E3CA;
+    box-sizing: border-box;
+    border:none;
+    color:40514;
+    border-radius: 1rem;
+    box-shadow: 0 0.3rem 0.5rem rgba(64, 81, 78, 0.3);
+    font-size: 1.7rem;
 }
 
 
@@ -228,8 +305,25 @@ a{
     color: black;
 }
 
+button{
+    font-family: 'Varela', sans-serif;
+}
+
 button:hover{
     cursor:pointer;
+}
+
+.title-wrapper{
+    display: flex;
+    justify-content: center;
+
+}
+
+h2{
+    text-align: center;
+    margin: 3rem;
+    width: 60%;
+    
 }
 
 @media (max-width:62.5rem){
@@ -245,10 +339,12 @@ button:hover{
 
 .u-grid-3{
     width:100%;
+    padding-left: 5rem;
+    padding-right: 5rem;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr
+    grid-template-columns: 1fr 1fr 1fr 1fr
 }
 
 .u-grid-gap-4{
-    gap: 4rem;
+    gap: 6rem;
 }
